# rs-fsrs

./: CONTRIBUTING.md  Cargo.toml  LICENSE  README.md
.github/: FUNDING.yml
.github/workflows/: autofix.yml  broken-link-check.yml  check.sh  check.yml  links.yml
src/: alea.rs  algo.rs  fractional_days.rs  fsrs.rs  lib.rs  model.rs  models.rs  parameters.rs  scheduler.rs  scheduler_basic.rs  scheduler_longterm.rs  tests.rs
