[package]
name = "rs-fsrs"
version = "1.2.1"
edition = "2024"
license-file = "LICENSE"
description = "Rust-based Scheduler for FSRS"


[dependencies]
chrono = { version = "0.4.41", features = ["serde"] }
serde = { version = "1.0", features = ["derive"], optional = true }
serde_json = { version = "1.0.141", optional = true }

[dev-dependencies]
rand = "0.9.2"

[features]
serde = ["dep:serde", "dep:serde_json"]
